--- a/src/components/GlobalStyle/GlobalStyle.scss
+++ b/src/components/GlobalStyle/GlobalStyle.scss
@@ -3,6 +3,12 @@
 
 :root {
     --primary: #fe2c55;
+    --text-color: #333;
+    //Default layout 
+    --default-layout-header-height: 60px;
+    --default-layout-width: 1150px;
+    --black: #000;
+
 }
 * {
     box-sizing: border-box;
@@ -18,4 +24,15 @@ body {
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
+    color: var(--text-color);
+}
+
+button, input, [tabindex] {
+    outline: none;
+    border: none;
+}
+
+a[href] {
+    color: var(--text-color);
+    text-decoration: none;
 }
