--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -1,13 +1,92 @@
 .wrapper {
-    height: 60px;
-    box-shadow: 0px 1px 1px rgba(0,0,0,0.12);
+    --searcho-border-radius: 96px;
+    --search-height: 46px;
+    --search-top-spacer: 9px;
+    --search-btn-width: 52px;
+
+    height: var(--default-layout-header-height);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12);
     display: flex;
     justify-content: center;
-    
 }
 
 .inner {
     height: 100%;
-    width: 1150px;
-    background-color: #ccc;
+    width: var(--default-layout-width);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.logo {
+
+}
+
+.search {
+    position: relative;
+    width: 361px;
+    height: var(--search-height);
+    background-color: rgba(22, 24, 35, 0.06);
+    border-radius: var(--searcho-border-radius);
+    display: flex;
+    border: 1.5px solid transparent;
+
+    input {
+        flex: 1;
+        color: var(--black);
+        font-size: 1.5rem;
+        background-color: transparent;
+        padding-left: 12px;
+        height: 100%;
+        caret-color: var(--primary);
+    }
+
+    input:not(:placeholder-shown) ~ .search-btn {
+        color: rgba(22, 24, 35, 0.73);
+    }
+
+    &::after {
+        content: '';
+        display: block;
+        position: absolute;
+        top: var(--search-top-spacer);
+        right: 52px;
+        width: 1px;
+        background-color: rgba(22, 24, 35, 0.1); 
+        height: calc(var(--search-height) - (var(--search-top-spacer) * 2));
+    }
+
+    &:focus-within {
+        border-color: rgba(22, 24, 35, 0.2);
+    }
+}
+.clear,
+.loading {
+    position: absolute;
+    right: calc(var(--search-btn-width) + 9px);
+    top: 50%;
+    transform: translateY(-50%);
+    color: rgba(22, 24, 35, 0.34);
+}
+.loading {
+    display: none;
+}
+.search-btn {
+    width: var(--search-btn-width);
+    height: 100%;
+    border-top-right-radius: var(--searcho-border-radius);
+    border-bottom-right-radius: var(--searcho-border-radius);
+    font-size: 2rem;
+    transition: all 0.1s linear;
+    color: rgba(22, 24, 35, 0.34);
+    svg {
+        padding-top: 3px;
+        padding-right: 3px;
+    }
+    &:hover {
+        cursor: pointer;
+        background-color: rgba(0,0,0,0.03);
+    }
+    &:active {
+        background-color: rgba(22, 24, 35, 0.06);
+    }
 }
